# AreasofControl

./: CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-cicd.yaml
areasofcontrol/: get_data.py
tests/: conftest.py  test_get_data.py  test_setup.py
tests/test_data/: history.json  negative_geojson.json  positive_geojson.json
